--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -1,39 +1,39 @@
 @import "variables";
 
 .slider {
-    max-width: $image-width;
-    margin: 0 auto;
+  max-width: $image-width;
+  margin: 0 auto;
 }
 
 .slider__images-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: $image-height-proportion;
+  position: relative;
+  width: 100%;
+  padding-bottom: $image-height-proportion;
 }
 
 .slider__image-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  overflow: hidden;
+
+  img {
+    top: 50%;
+    transform: translateY(-50%);
+    width: $image-width;
     position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+  }
 
-    img {
-        top: 50%;
-        transform: translatey(-50%);
-        width: $image-width;
-        position: absolute;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -o-user-select: none;
-        user-select: none;
-    }
+  &.slider__image-container--first {
+    width: 100%;
+  }
 
-    &.slider__image-container--first {
-        width: 100%;
-    }
-
-    &.slider__image-container--second {
-        width: 50%;
-    }
+  &.slider__image-container--second {
+    width: 50%;
+  }
 }
